# relativity-cosmology-computation-suite

./: .gitattributes  .gitignore  README.md
cosmology/bao-analyzer/: pyproject.toml
cosmology/bao-analyzer/src/bao_analyzer/: __init__.py  bao_fitting.py  correlation.py  power_spectrum.py  utils.py
cosmology/bao-analyzer/tests/: __init__.py  test_bao.py
cosmology/cmb-compressed-likelihoods/: README.md  pyproject.toml
cosmology/cmb-compressed-likelihoods/data/: data_manifest.json
cosmology/cmb-compressed-likelihoods/src/cmb_compressed_likelihoods/: __init__.py  distance_priors.py
cosmology/cmb-compressed-likelihoods/tests/: test_cmb_compressed_likelihoods.py
cosmology/cmb-lensing/: pyproject.toml
cosmology/cmb-lensing/src/cmb_lensing/: __init__.py  lensing_kernel.py  power_spectrum.py  reconstruction.py
cosmology/cmb-lensing/tests/: test_cmb_lensing.py
cosmology/cmb-power-spectrum/: pyproject.toml
cosmology/cmb-power-spectrum/src/cmb_power_spectrum/: __init__.py  fisher.py  likelihood.py  mcmc.py  theory_cls.py
cosmology/cmb-power-spectrum/tests/: test_cmb_power_spectrum.py
cosmology/friedmann-solver/: pyproject.toml
cosmology/friedmann-solver/src/friedmann_solver/: __init__.py  background.py  constants.py  cosmology.py  planck18.py
cosmology/friedmann-solver/tests/: test_friedmann.py
cosmology/h0-tension/: README.md  pyproject.toml
cosmology/h0-tension/data/: data_manifest.json  toy_constraints.json
cosmology/h0-tension/results/: baseline_summary.json
cosmology/h0-tension/scripts/: run_baseline_pipeline.py
cosmology/h0-tension/src/h0_tension/: __init__.py  io.py  metrics.py
cosmology/h0-tension/tests/: test_h0_tension.py  test_io.py
cosmology/halo-model/: pyproject.toml
cosmology/halo-model/src/halo_model/: __init__.py  hod.py  mass_function.py  power.py
cosmology/halo-model/tests/: test_halo.py
cosmology/inflation-solver/: pyproject.toml
cosmology/inflation-solver/src/inflation_solver/: __init__.py  background.py  potentials.py  slow_roll.py
cosmology/inflation-solver/tests/: test_inflation.py
cosmology/joint-dark-energy-inference/: README.md  pyproject.toml
cosmology/joint-dark-energy-inference/data/: data_manifest.json  toy_bao.json  toy_supernovae.csv
cosmology/joint-dark-energy-inference/notebooks/: reproduce_joint_dark_energy.md
cosmology/joint-dark-energy-inference/results/: baseline_summary.json  smoke_summary.json
cosmology/joint-dark-energy-inference/scripts/: download_data.py  run_baseline_pipeline.py  run_smoke_pipeline.py
cosmology/joint-dark-energy-inference/src/joint_dark_energy_inference/: __init__.py  data_adapters.py  likelihood.py  model_selection.py  models.py
cosmology/joint-dark-energy-inference/tests/: test_data_and_model_selection.py  test_joint_dark_energy.py
cosmology/matter-power-spectrum/: pyproject.toml
cosmology/matter-power-spectrum/src/matter_power_spectrum/: __init__.py  constants.py  growth.py  spectrum.py  transfer.py
cosmology/matter-power-spectrum/tests/: test_power.py  test_power_spectrum.py
cosmology/neutrino-cosmology/: pyproject.toml
cosmology/neutrino-cosmology/src/neutrino_cosmology/: __init__.py  background.py  constants.py  observables.py
cosmology/neutrino-cosmology/tests/: test_neutrino.py
cosmology/pic-simulation/: pyproject.toml
cosmology/pic-simulation/src/pic_simulation/: __init__.py  gravity.py  integrator.py  mesh.py  particles.py
cosmology/pic-simulation/tests/: test_pic.py
cosmology/primordial-bispectrum/: pyproject.toml
cosmology/primordial-bispectrum/tests/: test_bispectrum.py
cosmology/primordial-gravitational-waves/: pyproject.toml
cosmology/primordial-gravitational-waves/tests/: test_pgw.py
cosmology/primordial-perturbations/: pyproject.toml
cosmology/primordial-perturbations/tests/: test_perturbations.py
cosmology/recombination-history/: pyproject.toml
cosmology/recombination-history/tests/: test_recombination.py
cosmology/redshift-space/: pyproject.toml
cosmology/redshift-space/tests/: test_rsd.py
cosmology/sn-cosmology/: pyproject.toml
cosmology/sn-cosmology/tests/: test_sn.py
cosmology/thermal-history/: pyproject.toml
cosmology/thermal-history/tests/: test_thermal.py
cosmology/void-finder/: pyproject.toml
cosmology/void-finder/tests/: test_void.py
gravitational-waves/binary-ns/: pyproject.toml
gravitational-waves/binary-ns/tests/: test_binary_ns.py
gravitational-waves/bssn-solver/: pyproject.toml
gravitational-waves/bssn-solver/tests/: test_bssn.py
gravitational-waves/grb-jet/: pyproject.toml
gravitational-waves/grb-jet/tests/: test_grb.py
gravitational-waves/grmhd-solver/: pyproject.toml
gravitational-waves/grmhd-solver/tests/: test_grmhd.py
gravitational-waves/gw-data-analysis/: pyproject.toml
gravitational-waves/gw-data-analysis/tests/: test_gw_analysis.py
gravitational-waves/pn-waveform/: pyproject.toml
gravitational-waves/pn-waveform/tests/: test_waveform.py
gravitational-waves/pta-background/: README.md  pyproject.toml
gravitational-waves/pta-background/data/: data_manifest.json  toy_binned_spectrum.json
gravitational-waves/pta-background/results/: baseline_summary.json  smoke_summary.json
gravitational-waves/pta-background/scripts/: run_baseline_pipeline.py  run_smoke_pipeline.py
gravitational-waves/pta-background/tests/: test_data_io_and_sources.py  test_pta_background.py
gravitational-waves/pulsar-magnetosphere/: pyproject.toml
gravitational-waves/pulsar-magnetosphere/tests/: test_pulsar.py
gravitational-waves/standard-sirens/: README.md  pyproject.toml
gravitational-waves/standard-sirens/data/: data_manifest.json  toy_posterior_summary.json
gravitational-waves/standard-sirens/results/: baseline_summary.json  smoke_summary.json
gravitational-waves/standard-sirens/scripts/: download_data.py  run_baseline_pipeline.py  run_smoke_pipeline.py
gravitational-waves/standard-sirens/tests/: test_adapters.py  test_standard_sirens.py
gravitational-waves/tidal-disruption/: pyproject.toml
gravitational-waves/tidal-disruption/tests/: test_tde.py
(+275 files in other folders)
