[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "h0-tension"
version = "0.1.0"
description = "Hubble constant tension metrics and reporting utilities"
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
