[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "halo-model"
version = "0.1.0"
description = "Halo model large-scale structure analysis"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
test = ["pytest"]
