[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inflation-solver"
version = "0.1.0"
description = "Inflationary dynamics solver — slow-roll analysis, exact background evolution, Planck constraints"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.11", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]
