[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joint-dark-energy-inference"
version = "0.1.0"
description = "Lightweight DESI/SN/CMB-style dark-energy joint inference tools"
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
viz = ["matplotlib>=3.6"]

[tool.setuptools.packages.find]
where = ["src"]
