[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matter-power-spectrum"
version = "0.1.0"
description = "Matter power spectrum calculator with EH98 transfer function, growth factor, and Halofit"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
