[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pic_simulation"
version = "0.1.0"
description = "Particle-Mesh (PM) cosmological N-body simulation"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
