[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primordial_gravitational_waves"
version = "0.1.0"
description = "Primordial gravitational wave (stochastic GW background) calculator"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.5"]

[tool.setuptools.packages.find]
where = ["src"]
