[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redshift-space"
version = "0.1.0"
description = "Redshift-space distortions and Alcock-Paczynski effect"
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest"]
