[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sn-cosmology"
version = "0.1.0"
description = "Type Ia supernova cosmology fitter"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
