[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermal-history"
version = "0.1.0"
description = "Cosmic thermal history from Planck to today"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
