[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "void-finder"
version = "0.1.0"
description = "Cosmic void identification and analysis"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
test = ["pytest"]
