[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grb_jet"
version = "0.1.0"
description = "Gamma-ray burst jet simulator"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
