[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grmhd_solver"
version = "0.1.0"
description = "General Relativistic Magnetohydrodynamics solver"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
