[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tidal_disruption"
version = "0.1.0"
description = "Tidal Disruption Event (TDE) simulator"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
